# autonomous-hockey-robot

./: .gitignore  LICENSE  README.md  frames_2026-01-13_23.31.35.gv
src/: Gazebo colcon build source.txt  Running everything.txt
src/hockey_control/: package.xml  setup.cfg  setup.py
src/hockey_control/hockey_control/: puck_kicker.py  simple_fsm.py
src/hockey_control/launch/: fsm.launch.py
src/hockey_perception/: package.xml  setup.cfg  setup.py
src/hockey_perception/hockey_perception/: lidar_puck_detector.py  puck_chaser.py
src/hockey_robot_description/: CMakeLists.txt  package.xml
src/hockey_robot_description/launch/: bridge.launch.py  hockey_bringup.launch.py  spawn_robots.launch.py
src/hockey_robot_description/urdf/: hockey_robot.urdf.xacro
src/hockey_world/: CMakeLists.txt  package.xml
src/hockey_world/worlds/: hockey_arena.sdf
