<?xml version="1.0"?>
<package format="3">
  <name>hockey_world</name>
  <version>0.0.0</version>
  <description>Hockey arena world for the hockey robot simulation</description>
  <maintainer email="nikolina@todo.todo">nikolina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>